// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGraphOrder gets graph order 1`] = `
Array [
  "E",
  "D",
  "B",
  "C",
  "A",
]
`;

exports[`getGraphOrder hoists inside graph 1`] = `
Array [
  "E",
  "F",
  "D",
  "B",
  "C",
  "A",
]
`;

exports[`getGraphOrder hoists leaf in graph 1`] = `
Array [
  "F",
  "E",
  "D",
  "B",
  "C",
  "A",
]
`;
